frame by frame done , there problem with blink ....
next sprite drawComponent

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="robots" content="noindex">
 
-  <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="imgs/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
   <meta name="msapplication-TileImage" content="/ms-icon-310x310.png">
 
