rtc class implementing , no stable

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,8 @@
     <input type="text" id="room-name" placeholder="Private Room-ID" title="Your private rooms unique-id. It is required!"
       value="MAINSERVER">
     <input type="text" id="your-name" placeholder="(optional)" title="Optional but Recommended!">
-    <button id="continue" title="Click to join the room!">connect</button>
+    <input type="text" id="sender" placeholder="" value="test 1">
+    <button id="continue" title="Click to join the room!">continue</button>
     <div class="controls">
       <button id="allow-webcam" class="icon" disabled title="Enable Your Webcam"></button>
       <button id="allow-mic" class="icon" disabled title="Enable Your Microphone"></button>
