Session logic implementation !
Session based on websocket communication !

--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,8 @@
     <button id="allow-screen" class="icon myButton" disabled title="Enable Your Screen"></button>
     <button id="share-files" class="icon myButton" disabled title="Select and Share Your Files"></button>
   </div>
-
   <div id="webCamView" class="webCamView myButton" style="display: block"></div>
+  <div id="popup" class="popup"></div>
 </body>
 
 </html>
