SignIn / SignUp handling forms
also needed to be done email confirmation.

--- a/src/html-components/login.html
+++ b/src/html-components/login.html
@@ -1,8 +1,8 @@
 <div class="container">
   <form action="" class="form-app">
     <ul class="nav">
-      <li class="nav-item"><a href="javascript:void(0)" id="sing-in-tab">Sign in</a></li>
-      <li class="nav-item active"><a href="javascript:void(0)" id="sing-up-tab">Sign Up</a></li>
+      <li class="nav-item active"><a href="javascript:void(0)" id="sing-in-tab">Sign in</a></li>
+      <li class="nav-item"><a href="javascript:void(0)" id="sing-up-tab">Sign Up</a></li>
     </ul>
     <label for="login-user" class="form-label">Email</label>
     <input id="login-user" class="form-input-text" type="text" />
@@ -14,5 +14,5 @@
     <button id="login-button" class="login-button"> Sign in </button>
     <span id="error-msg-reg" class="myError"></span>
   </form>
-  <button id="forgotPassword" class="link"> Stay on this page. </button>
+  <button id="forgotPassword" class="link"> Forgot Password ? </button>
 </div>
