update session staff

--- a/src/html-components/login.html
+++ b/src/html-components/login.html
@@ -14,5 +14,5 @@
     <button id="login-button" class="login-button"> Sign in </button>
     <span id="error-msg-reg" class="myError"></span>
   </form>
-  <button id="forgotPassword" class="link"> Forgot Password ? </button>
+  <button id="forgotPassword" class="link login-button"> Forgot Password ? </button>
 </div>
