--- a/src/html-components/register.html
+++ b/src/html-components/register.html
@@ -11,8 +11,8 @@
     <label for="login-checkbox" class="form-checkbox-label">
       <input id="login-checkbox" class="form-input-checkbox" type="checkbox"> Keep me logged in
     </label>
-    <button id="login-button" class="login-button"> Sign in </button>
+    <button id="reg-button" class="login-button"> Sign up </button>
     <span id="error-msg-reg" class="myError"></span>
   </form>
-  <button id="forgotPassword" class="link"> Stay on this page. </button>
+  <button id="forgotPassword" class="link login-button"> Stay on this page. </button>
 </div>
