registration process almost complete

--- a/src/html-components/register.html
+++ b/src/html-components/register.html
@@ -4,10 +4,10 @@
       <li class="nav-item"><a href="javascript:void(0)" id="sing-in-tab">Sign in</a></li>
       <li class="nav-item active"><a href="javascript:void(0)" id="sing-up-tab">Sign Up</a></li>
     </ul>
-    <label for="login-user" class="form-label">Email</label>
-    <input id="login-user" class="form-input-text" type="text" />
-    <label for="login-pass" class="form-label">Password</label>
-    <input id="login-pass" class="form-input-text" type="text" />
+    <label for="reg-user" class="form-label">Email</label>
+    <input id="reg-user" class="form-input-text" type="text" />
+    <label id="reg-pass-label" for="reg-pass" class="form-label">Password</label>
+    <input id="reg-pass" class="form-input-text" type="text" placeholder="enter password here" />
     <label for="login-checkbox" class="form-checkbox-label">
       <input id="login-checkbox" class="form-input-checkbox" type="checkbox"> Keep me logged in
     </label>
