register in progress
Prepare process for production build fail for now

--- a/src/html-components/register.html
+++ b/src/html-components/register.html
@@ -14,5 +14,5 @@
     <button id="reg-button" class="login-button"> Sign up </button>
     <span id="error-msg-reg" class="myError"></span>
   </form>
-  <button id="forgotPassword" class="link login-button"> Stay on this page. </button>
+  <button id="notify" class="link login-button"> Stay on this page. </button>
 </div>
