--- a/src/html-components/login.html
+++ b/src/html-components/login.html
@@ -12,7 +12,7 @@
       <input id="login-checkbox" class="form-input-checkbox" type="checkbox"> Keep me logged in
     </label>
     <button id="login-button" class="login-button"> Sign in </button>
-    <span id="error-msg-reg" class="myError"></span>
+    <span id="error-msg-login" class="myError"></span>
   </form>
   <button id="forgotPassword" class="link login-button"> Forgot Password ? </button>
 </div>
