--- a/src/html-components/user-profile.html
+++ b/src/html-components/user-profile.html
@@ -1,14 +1,19 @@
 <div class="container">
-  <form action="" class="form-app">
+  <button id="user-profile-maximaze" class="link login-button" style="display: none;position:absolute;left:0px;top:0px;z-index: 100;">
+    Menu </button>
+  <form id="user-profile-form" action="" class="form-app">
     <ul class="nav">
-      <li class="nav-item"><a href="javascript:void(0)" id="play">Play</a></li>
+      <li class="nav-item"><a href="javascript:void(0)" id="play-games">Play games</a></li>
       <li class="nav-item active"><a href="javascript:void(0)" id="myProfile">My profile</a></li>
       <li class="nav-item"><a href="javascript:void(0)" id="hide">Close</a></li>
     </ul>
-    <label for="login-checkbox" class="form-checkbox-label">
-      <input disabled id="reg-user" class="form-input-text" type="text" />
-      <label id="reg-pass-label" class="form-label">Rank 1000!</label>
-      <span id="error-msg-reg" class="myError"></span>
+    <label for="user-email" class="form-label">Email</label>
+    <input disabled id="user-email" class="form-input-text" type="text" />
+    <label for="user-rank" class="form-label">Rank</label>
+    <input disabled id="user-rank" class="form-input-text" type="text" />
+    <label for="user-points" class="form-label">Points</label>
+    <input disabled id="user-points" class="form-input-text" type="text" />
+    <span id="error-msg-reg" class="myError"></span>
   </form>
-  <button id="notify" class="link login-button"> Stay on this page. </button>
+  <button id="user-profile-btn-ok" class="link login-button"> OK </button>
 </div>
