User portal , game list

--- a/src/html-components/register.html
+++ b/src/html-components/register.html
@@ -5,7 +5,7 @@
       <li class="nav-item active"><a href="javascript:void(0)" id="sing-up-tab">Sign Up</a></li>
     </ul>
     <label for="reg-user" class="form-label">Email</label>
-    <input id="reg-user" class="form-input-text" type="text" />
+    <input id="reg-user" class="form-input-text" type="text" placeholder="enter email here" />
     <label id="reg-pass-label" for="reg-pass" class="form-label">Password</label>
     <input id="reg-pass" class="form-input-text" type="text" placeholder="enter password here" />
     <label for="login-checkbox" class="form-checkbox-label">
