--- a/src/html-components/login.html
+++ b/src/html-components/login.html
@@ -5,9 +5,9 @@
       <li class="nav-item"><a href="javascript:void(0)" id="sing-up-tab">Sign Up</a></li>
     </ul>
     <label for="login-user" class="form-label">Email</label>
-    <input id="login-user" class="form-input-text" type="text" />
+    <input id="login-user" class="form-input-text" type="text" placeholder="enter email here" />
     <label for="login-pass" class="form-label">Password</label>
-    <input id="login-pass" class="form-input-text" type="text" />
+    <input id="login-pass" class="form-input-text" type="text" placeholder="enter password here" />
     <label for="login-checkbox" class="form-checkbox-label">
       <input id="login-checkbox" class="form-input-checkbox" type="checkbox"> Keep me logged in
     </label>
