--- a/src/html-components/user-profile.html
+++ b/src/html-components/user-profile.html
@@ -3,9 +3,9 @@
     Menu </button>
   <form id="user-profile-form" action="" class="form-app">
     <ul class="nav">
-      <li class="nav-item"><a href="javascript:void(0)" id="play-games">Play games</a></li>
       <li class="nav-item active"><a href="javascript:void(0)" id="myProfile">My profile</a></li>
-      <li class="nav-item"><a href="javascript:void(0)" id="hide">Close</a></li>
+      <li class="nav-item"><a href="javascript:void(0)" id="games-list">Play games</a></li>
+      <li class="nav-item"><a href="javascript:void(0)" id="store-form">Buy</a></li>
     </ul>
     <label for="user-email" class="form-label">Email</label>
     <input disabled id="user-email" class="form-input-text" type="text" />
