--- a/src/html-components/user-profile.html
+++ b/src/html-components/user-profile.html
@@ -13,6 +13,9 @@
     <input disabled id="user-rank" class="form-input-text" type="text" />
     <label for="user-points" class="form-label">Points</label>
     <input disabled id="user-points" class="form-input-text" type="text" />
+    <label for="user-nickName" class="form-label">Nickname</label>
+    <input id="nick-name" class="form-input-text" type="text" />
+    <button id="set-nickname-profile" class="link login-button"> Set new nickname </button>
     <span id="error-msg-reg" class="myError"></span>
   </form>
   <button id="user-profile-btn-ok" class="link login-button"> OK </button>
