--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  <div id="log-network" class="log-network" style="display:block">
+  <div id="network-panel" class="log-network" style="display:block">
     <div id="log-chat" class="log-chat" style="display:block">
     </div>
     <input type="text" id="room-name" placeholder="Private ID" title="id.required" value="MAINSERVER" class="myButton"
