--- a/src/html-components/games-list.html
+++ b/src/html-components/games-list.html
@@ -1,12 +1,11 @@
 <div class="container">
-  <form action="" class="form-app">
+  <form id="games-list-form" action="" class="form-app">
     <ul class="nav">
       <li class="nav-item"><a href="javascript:void(0)" id="myProfile">My profile</a></li>
       <li class="nav-item active"><a href="javascript:void(0)" id="play-games">Play games</a></li>
       <li class="nav-item"><a href="javascript:void(0)" id="store-form">Buy</a></li>
     </ul>
-    <h2>Platformer</h2>
-    <button id="play-platformer" game="platformer" class="link login-button"> PLAY </button>
+    <span class="form-input-text">Games list </span>
     <span id="error-msg-reg" class="myError"></span>
   </form>
 </div>
