--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
     <button id="share-files" class="icon myButton" disabled title="Select and Share Your Files"></button>
   </div>
   <div id="webCamView" class="webCamView myButton" style="display: block"></div>
-  <div id="popup" class="popup"></div>
+  <div id="popup" class="popup" style="display:none"></div>
 </body>
 
 </html>
