--- a/src/html-components/broadcaster.html
+++ b/src/html-components/broadcaster.html
@@ -1,4 +1,5 @@
 ﻿<link href="styles/bootstrap.min.css" rel="stylesheet">
+<link href="styles/broadcaster.css" rel="stylesheet">
 <script src="externals/jquery-3.3.1.slim.min.js"></script>
 <script src="externals/popper.min.js"></script>
 <script src="externals/bootstrap.min.js"></script>
@@ -142,7 +143,7 @@
     </div>
   </div>
 
-  <section style="min-height: 400px;">
+  <section class="room-section">
     <table class="table">
       <thead>
         <tr>
