WIP - implementing multi-rtc3
Alias 'Broadcaster'

--- a/src/html-components/broadcaster.html
+++ b/src/html-components/broadcaster.html
@@ -5,11 +5,11 @@
 <script src="externals/bootstrap.min.js"></script>
 <!--script src="/socket.io/socket.io.js"></script-->
 
-<div class="" id="broadcasterUI">
+<div class="broadcaster" id="broadcasterUI">
 
   <header style="margin-bottom: 20px;">
 
-    <div style="float: right;margin-top: 15px;">
+    <div style="float: right;margin: 15px auto;">
       <button class="btn btn-primary" data-toggle="modal" data-target="#startRoomModel">Create A New Room</button>
       <button id="btn-show-join-hidden-room" class="top-span btn btn-secondary" data-toggle="modal" data-target="#joinRoomModel">Join
         A Room</button>
@@ -164,7 +164,7 @@
     </table>
   </section>
 
-  <section class="make-center">
+  <section class="make-center video-container">
     <div id="videos-container" style="margin: 20px 0;"></div>
     <div id="room-urls" style="text-align: center;display: none;background: #F1EDED;margin: 15px -10px;border: 1px solid rgb(189, 189, 189);border-left: 0;border-right: 0;"></div>
   </section>
