Implemented dragging for video media box's
Implemented dragging for video media box's  for broadcaster (MultiRTC3)
.

Fix type for Addson :
export type Addson = Array<{ name: string, enabled: boolean, scriptPath:
string }>;

--- a/src/html-components/broadcaster.html
+++ b/src/html-components/broadcaster.html
@@ -164,7 +164,7 @@
     </table>
   </section>
 
-  <section class="make-center video-container">
+  <section class="video-container">
     <div id="videos-container" class="media-elements"></div>
     <div id="room-urls" style="text-align: center;display: none;background: #F1EDED;margin: 15px -10px;border: 1px solid rgb(189, 189, 189);border-left: 0;border-right: 0;"></div>
   </section>
