--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimal-ui">
   <meta name="theme-color" content="#000000">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="Description" content="Typescript project based on matter.ts implementation. This version 2 of visualjs game engine totally different approach , export name lib name is visualjs2.js . Whole project is based fully dependency build. Main file is app.ts . Class ioc saves singlton instances also bind. In this project html and css is also present. Based on canvas2D. Used lib Matter.js/ts in typescript variant.">
   <meta http-equiv="Cache-control" content="public">
   <meta name="msapplication-navbutton-color" content="#000000">
