--- a/src/examples/platformer/ui/player-board.html
+++ b/src/examples/platformer/ui/player-board.html
@@ -9,7 +9,7 @@
 <div class="container player-board">
   <div  class="form-app">
     <ul class="nav noselect">
-      <li class="nav-item noselect"> Lives : <span id="UIPlayerLives">3</span></li>
+      <li class="nav-item noselect"> Lives : <span class="UIPlayerLives">3</span></li>
       <li class="nav-item active"> Time </li>
     </ul>
     <span id="error-msg-reg" class="myError"></span>
