--- a/src/examples/platformer/ui/player-board.html
+++ b/src/examples/platformer/ui/player-board.html
@@ -14,6 +14,7 @@
     </ul>
     <span id="error-msg-reg" class="myError"></span>
   </form>
-  <button id="test1" class="link login-button"> Reset </button>
+  <button id="test1" class="link login-button"> Play again </button>
+  <span id="error-msg-reg" class="myError">Cost you 10 points.</span>
 </div>
 
