Css improved to make place for all

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
     <input type="text" id="your-name" placeholder="Username" title="Recommended" class="myButton" style="width:170px;">
     <button id="continue" title="Click to join the room!" class="myButton">continue</button>
     <div id="who-is-typing" class="whoIsTyping"></div>
-    <input type="text" id="sender" placeholder="" value="Hello" style="position:absolute;bottom:10%;left:0;width:64%;z-index: 100;"
+    <input type="text" id="sender" placeholder="" value="Hello" style="position:absolute;bottom:0;left:0;width:100%;z-index: 100;"
       class="myButton">
     <div id="logger" class="logger"></div>
   </div>
