Prapare style  for multiplayer implementationi

--- a/src/html-components/user-profile.html
+++ b/src/html-components/user-profile.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <button id="user-profile-maximaze" class="link login-button" style="display: none;position:absolute;left:0px;top:-30px;z-index: 100;">
+  <button id="user-profile-maximaze" class="link login-button hide-user-profile" style="display: none;position:absolute;left:0px;top:-30px;z-index: 100;">
     Menu </button>
   <form id="user-profile-form" action="" class="form-app">
     <ul class="nav">
@@ -18,5 +18,5 @@
     <button id="set-nickname-profile" class="link login-button"> Set new nickname </button>
     <span id="error-msg-reg" class="myError"></span>
   </form>
-  <button id="user-profile-btn-ok" class="link login-button"> OK </button>
+
 </div>
