--- a/src/html-components/register.html
+++ b/src/html-components/register.html
@@ -7,7 +7,7 @@
     <label for="reg-user" class="form-label">Email</label>
     <input id="reg-user" class="form-input-text" type="text" placeholder="enter email here" />
     <label id="reg-pass-label" for="reg-pass" class="form-label">Password</label>
-    <input id="reg-pass" class="form-input-text" type="text" placeholder="enter password here" />
+    <input id="reg-pass" class="form-input-text" type="password" placeholder="enter password here" />
     <label for="login-checkbox" class="form-checkbox-label">
       <input id="login-checkbox" class="form-input-checkbox" type="checkbox"> Keep me logged in
     </label>
