Improve NEW GAME action ...
  - New LICENCE for src/lib
  - Fix NEW GAME
 - New file DEFAULT_PLAYER_DATA  - enumerator to make client config less leght .

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,8 @@
   <noscript>
     You need to allow JavaScript in you browser.
   </noscript>
+  <div id="msgbox" class="log-network" style="display:none">
+  </div>
   <div id="network-panel" class="log-network" style="display:none">
     <div id="log-chat" class="log-chat" style="display:block">
     </div>
