WIP - Out of game action

--- a/src/html-components/store.html
+++ b/src/html-components/store.html
@@ -4,6 +4,7 @@
       <li class="nav-item"><a href="javascript:void(0)" id="myProfile">My profile</a></li>
       <li class="nav-item"><a href="javascript:void(0)" id="games-list">Play games</a></li>
       <li class="nav-item active"><a href="javascript:void(0)" id="store-form">Buy</a></li>
+      <li class="nav-item"><a href="javascript:void(0)" id="log-out">Log Out</a></li>
     </ul>
     <span id="error-msg-reg" class="myError"></span>
   </form>
