--- a/src/examples/platformer/ui/player-board.html
+++ b/src/examples/platformer/ui/player-board.html
@@ -9,12 +9,13 @@
 <div class="container player-board">
   <div  class="form-app">
     <ul class="nav noselect">
-      <li class="nav-item noselect"> Lives : <span class="UIPlayerLives">3</span></li>
+      <li class="nav-item noselect"> Lives : <span class="UIPlayerLives" id="UIPlayerLives">3</span></li>
       <li class="nav-item active"> Time </li>
     </ul>
     <span id="error-msg-reg" class="myError"></span>
   </form>
   <button id="playAgainBtn" class="link login-button"> Play again </button>
   <span id="error-msg-reg" class="myError">Cost you 10 points.</span>
+  <button id="out-of-game" class="link login-button"> Exit game </button>
 </div>
 
