--- a/src/html-components/games-list.html
+++ b/src/html-components/games-list.html
@@ -4,6 +4,7 @@
       <li class="nav-item"><a href="javascript:void(0)" id="myProfile">My profile</a></li>
       <li class="nav-item active"><a href="javascript:void(0)" id="play-games">Play games</a></li>
       <li class="nav-item"><a href="javascript:void(0)" id="store-form">Buy</a></li>
+      <li class="nav-item"><a href="javascript:void(0)" id="log-out">Log Out</a></li>
     </ul>
     <span class="form-input-text">Games list </span>
     <span id="error-msg-reg" class="myError"></span>
