LogOut implemented also outOfGame

--- a/src/html-components/user-profile.html
+++ b/src/html-components/user-profile.html
@@ -5,7 +5,7 @@
       <li class="nav-item active"><a href="javascript:void(0)" id="myProfile">My profile</a></li>
       <li class="nav-item"><a href="javascript:void(0)" id="games-list">Play games</a></li>
       <li class="nav-item"><a href="javascript:void(0)" id="store-form">Buy</a></li>
-      <li class="nav-item"><a href="javascript:void(0)" id="log-out">Log Out</a></li>
+      <li class="nav-item"><a href="#" id="log-out">Log Out</a></li>
     </ul>
     <label for="user-email" class="form-label">Email</label>
     <input disabled id="user-email" class="form-input-text" type="text" />
