--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,8 @@
     </div>
     <input type="text" id="room-name" placeholder="Private ID" title="id.required" value="MAINSERVER" class="myButton"
       style="width:169px;">
-    <input type="text" id="your-name" placeholder="Username" title="Recommended" class="myButton" style="width:170px;">
-    <button id="continue" title="Click to join the room!" class="myButton">continue</button>
+    <input type="text" id="your-name" placeholder="Username" title="Recommended" class="myButton" style="width:170px;display:none;">
+    <button id="continue" title="Click to join the room!" class="myButton" style="display:none;" >continue</button>
     <div id="who-is-typing" class="whoIsTyping"></div>
     <input type="text" id="sender" placeholder="" value="Hello" style="position:absolute;bottom:0;left:0;width:100%;z-index: 100;"
       class="myButton">
