--- a/src/html-components/message-box.html
+++ b/src/html-components/message-box.html
@@ -1,8 +1,9 @@
-<div class="container">
+<div class="">
 
     <ul class="nav">
       <div class="nav-item active" id="message-box"> Message </div>
     </ul>
-    <div id="messager-btn-ok" class="login-button"> Ok </div>
+    <div id="message-box-content" class="message-box-content"> Hello </div>
+    <div id="message-box-btn" class="message-box-btn"> Ok </div>
 
 </div>
