--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     You need to allow JavaScript in you browser.
   </noscript>
   <div id="msgbox" class="log-network" style="display:none"></div>
-  <div id="message-box" class="log-network" style="display:none"></div>
+  <div id="message-box" class="message-box" style="display:none"></div>
   <div id="network-panel" class="log-network" style="display:none">
     <div id="log-chat" class="log-chat" style="display:block">
     </div>
