--- a/src/html-components/message-box.html
+++ b/src/html-components/message-box.html
@@ -1,7 +1,7 @@
 <div class="">
 
     <ul class="nav">
-      <div class="nav-item active" id="message-box"> Message </div>
+      <h2 class="nav-item active" id="message-box"> Message </h2>
     </ul>
     <div id="message-box-content" class="message-box-content"> Hello </div>
     <div id="message-box-btn" class="message-box-btn"> Ok </div>
