--- a/src/examples/platformer/ui/player-board.html
+++ b/src/examples/platformer/ui/player-board.html
@@ -14,7 +14,7 @@
     </ul>
     <span id="error-msg-reg" class="myError"></span>
   </form>
-  <button id="playAgainBtn" class="link login-button"> Play again </button>
+  <button id="playAgainBtn" class="link login-button" disabled> Play again </button>
   <span id="error-msg-reg" class="myError">Cost you 10 points.</span>
   <button id="out-of-game" class="link login-button"> Exit game </button>
 </div>
