ioc.ts is not in src/libs folder anymore
 - ioc.ts is not in src/libs folder anymore. (licence is changed)
 - UI core improved

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
   </noscript>
   <div id="msgbox" class="log-network" style="display:none"></div>
   <div id="message-box" class="message-box" style="display:none"></div>
-  <div id="network-panel" class="log-network" style="display:none">
+  <div id="network-panel" class="log-network" style="display:none" renderRegime="normal">
     <div id="log-chat" class="log-chat" style="display:block">
     </div>
     <input type="text" id="room-name" placeholder="Private ID" title="id.required" value="MAINSERVER" class="myButton"
@@ -41,6 +41,7 @@
     <div id="who-is-typing" class="whoIsTyping"></div>
     <input type="text" id="sender" placeholder="" value="Hello" style="position:absolute;bottom:0;left:0;width:100%;z-index: 100;"
       class="myButton">
+      <button id="display-network-panel" title="Show/Hide chat box" class="myButton" style="display:block;" >hide</button>
     <div id="logger" class="logger"></div>
   </div>
   <div id="media-rtc2-controls" class="controls" style="display:none">
