--- a/src/examples/platformer/ui/player-board.html
+++ b/src/examples/platformer/ui/player-board.html
@@ -16,6 +16,6 @@
   </form>
   <button id="playAgainBtn" class="link login-button" disabled> Play again </button>
   <span id="error-msg-reg" class="myError">Cost you 10 points.</span>
-  <button id="out-of-game" class="link login-button"> Exit game </button>
+  <button id="out-of-game" class="link login-button" disabled> Exit game </button>
 </div>
 
